# feedreader-rs

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yaml  dependabot.yaml
src/: db.rs  main.rs
templates/: add_feed.html  article_base.html  article_list.html  articles.html  base.html  feed_list.html  feeds.html
